Bug 186371 - Tabbing between fields in Select Color dialog not consitent
Summary: Tabbing between fields in Select Color dialog not consitent
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdeui (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-06 19:11 UTC by Angel Blue01
Modified: 2009-05-06 03:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Angel Blue01 2009-03-06 19:11:33 UTC
Version:            (using KDE 4.2.0)
OS:                Linux
Installed from:    SuSE RPMs

Experienced Behavior:
Switching to the Red textbox (from the Value textbox) via the Tab key puts the cursor in the textbox. Pressing the Tab key from Red textbox to Green puts the focus on the radio button, another press is required to go to the textbox. Switching from the Green textbox to the Blue goes directly to the Blue textbox.

This is very irritating when typing RGB values quickly, a different number of keystrokes is required to go from box to box.

Expected Behavior:
The behavior of the Tab key should be consistent and either always go to the radio button or always to the textbox.

Personally, I don't see the need for the radio button and would prefer to go to the textboxes directly.
Comment 1 Christoph Feck 2009-05-06 03:09:15 UTC
SVN commit 964114 by cfeck:

Add tab order to input fields, respect sizeHint()

BUG: 186371


 M  +10 -13    kcolordialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=964114
Comment 2 Christoph Feck 2009-05-06 03:13:50 UTC
SVN commit 964115 by cfeck:

Add tab order to input fields, respect sizeHint() (backport r964114)

Will be fixed in KDE 4.2.4

CCBUG: 186371


 M  +10 -13    kcolordialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=964115