Add tab order to input fields, respect sizeHint()

BUG: 186371

svn path=/trunk/KDE/kdelibs/; revision=964114